test-projects/syntax-error/test/syntax_error/core_test.clj
(ns syntax-error.core-test
  (:require [clojure.test :refer :all]
            [syntax-error.core :refer :all]))

(deftest a-test
  (testing "FIXME, I fail."
    (is (= 0 1))))
